# mike-batch

./: .gitignore  README.md  main.py  pyproject.toml
assets/: Q1.xlsx  Q2.xlsx  Q3.xlsx  Z0.xlsx  structure.drawio  未命名绘图.drawio
assets/limit_time/: do_nothing_cases.json  pump_cases.json
assets/not_limit/: do_nothing_cases.json  pump_cases.json
assets/required/: LHKHX.m21fm  q1_cases.csv  q2_cases.csv  q3_cases.csv  v0_cases.csv  z0_cases.csv
assets/required/do_nothing/: q2_cases.csv  q3_cases.csv
assets/required/pump/: q1_cases.csv  q2_cases.csv  q3_cases.csv
assets/test/: Qout_LHK.dfs0  Qout_LHK_mikeio_write.dfs0
src/: Check.py  CheckTasks.py  main.py
src/aspect/: __init__.py  log_aspect.py  main_aspect.py  simulation_aspect.py  start_simulation_aspect.py  worker_aspect.py
src/common/: Path.py  __init__.py  case_type.py  file_name.py  path.py  picologging_config.py  rd_client_config.py  task_entity.py
src/common/enums/: Status.py  __init__.py
src/enums/: __init__.py  status_type.py
src/script/: ConfigInputFiles.py  GenCaseFolder.py  GenCaseJson.py  InvokeFemEngine.py  __init__.py  gen_case_folder.py  gen_case_json.py  simulation.py  statistics_cases.py  timing_job.py
src/script/custom/: __init__.py  custom_dfs0.py  custom_m21fm.py
src/tools/: __init__.py  calculate_tool.py  permissions_tool.py  tasks_tool.py
